kubernetes/argocd/applications/default/apps/audiobookshelf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: default
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Default
      url: "https://audiobookshelf.vaderrp.com/ping"
      conditions:
        - "[STATUS] == 200"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Audiobookshelf
    gethomepage.dev/icon: audiobookshelf.png
    gethomepage.dev/href: https://audiobookshelf.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=audiobookshelf
    gethomepage.dev/widget.type: audiobookshelf
    gethomepage.dev/widget.url: http://audiobookshelf.media.svc.cluster.local
    gethomepage.dev/widget.key: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJrZXlJZCI6IjA3YWVhZTdmLTA2YTAtNDdkMC04NWZiLTBmOGNlZWY3MTZmZiIsIm5hbWUiOiJIb21lcGFnZSIsInR5cGUiOiJhcGkiLCJpYXQiOjE3NjI0MTI2NDh9.ePK2vcLuvBu0YS-hVC9rvJbCUkH4Wrs4_qRUAbv-vsY
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - audiobookshelf.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /socket.io
        - path:
            type: PathPrefix
            value: /audiobookshelf/socket.io
      backendRefs:
        - name: audiobookshelf
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
      backendRefs:
        - group: ""
          kind: Service
          name: audiobookshelf
          port: 80
          weight: 1
